:tada: The navbar wasn't fixed (forgot and didn't notice until recently) + fixed the rest of the routes responsiveness + Bookable had some major overflowing issues on mobile devices which is now fixed.

--- a/view/src/App.css
+++ b/view/src/App.css
@@ -15,6 +15,9 @@ html {
   flex-direction: row;
   justify-content: space-between;
   width: 100vw;
+  background: #d8d8d896;
+  position: fixed;
+  z-index: 99;
 }
 
 .nav-items {
