--- a/view/src/Profile.css
+++ b/view/src/Profile.css
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  margin-top: 15vh;
 }
 
 .profile-con > input {
